@@ -3,28 +3,28 @@ package com.rbme.apis.config;
 import com.rbme.apis.security.JwtAuthenticationEntryPoint;
 import com.rbme.apis.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
-import org.springframework.beans.factory.annotation.Value;
 
 @Configuration
-@EnableWebSecurity
 @EnableMethodSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
@@ -35,47 +35,37 @@ public class SecurityConfig {
     @Value("${app.cors.allowed-origins}")
     private String allowedOrigins;
 
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
         http
-
-                // =========================================================
-                // CSRF
-                // =========================================================
                 .csrf(csrf -> csrf.disable())
 
-                // =========================================================
-                // CORS
-                // =========================================================
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .cors(cors ->
+                        cors.configurationSource(corsConfigurationSource())
+                )
 
-                // =========================================================
-                // SESSION
-                // =========================================================
                 .sessionManagement(session ->
                         session.sessionCreationPolicy(
                                 SessionCreationPolicy.STATELESS
                         )
                 )
 
-                // =========================================================
-                // EXCEPTION HANDLING
-                // =========================================================
                 .exceptionHandling(exception ->
                         exception.authenticationEntryPoint(
                                 jwtAuthenticationEntryPoint
                         )
                 )
 
-                // =========================================================
-                // AUTHORIZATION
-                // =========================================================
                 .authorizeHttpRequests(auth -> auth
 
-                        // -------------------------------------------------
-                        // PUBLIC FILES
-                        // -------------------------------------------------
                         .requestMatchers(
                                 "/product/images/**",
                                 "/product/thumbnail/**",
@@ -84,67 +74,86 @@ public class SecurityConfig {
                                 "/company/banner/**"
                         ).permitAll()
 
-                        // -------------------------------------------------
-                        // PUBLIC AUTH APIs
-                        // -------------------------------------------------
                         .requestMatchers(
                                 "/api/admin/auth/**"
                         ).permitAll()
 
-                        // -------------------------------------------------
-                        // PUBLIC COMPANY APIs
-                        // -------------------------------------------------
-                        .requestMatchers(
-                                "/api/companies/**"
-                        ).permitAll()
-
-                        // -------------------------------------------------
-                        // PUBLIC CATEGORY APIs
-                        // -------------------------------------------------
-                        .requestMatchers(
-                                "/api/categories/**"
-                        ).permitAll()
-
-                        // -------------------------------------------------
-                        // PUBLIC PRODUCT TYPE APIs
-                        // -------------------------------------------------
-                        .requestMatchers(
-                                "/api/types/**"
-                        ).permitAll()
-
-                        // -------------------------------------------------
-                        // PUBLIC PRODUCT APIs
-                        // -------------------------------------------------
-                        .requestMatchers(
-                                "/api/products/**"
-                        ).permitAll()
-
-                        // -------------------------------------------------
-                        // PUBLIC PROJECT ENQUIRY
-                        //
-                        // IMPORTANT:
-                        // Contact/Enquiry form does NOT need JWT.
-                        // -------------------------------------------------
                         .requestMatchers(
                                 "/api/project-enquiries"
                         ).permitAll()
 
-                        // -------------------------------------------------
-                        // ADMIN APIs
-                        // -------------------------------------------------
+                        // Company
+                        .requestMatchers(
+                                "/api/admin/companies/**"
+                        ).authenticated()
+
+                        // Category
+                        .requestMatchers(
+                                "/api/admin/categories/**"
+                        ).authenticated()
+
+                        // Product Type
+                        .requestMatchers(
+                                "/api/admin/product-types/**"
+                        ).authenticated()
+
+                        // Product Specification
+                        .requestMatchers(
+                                "/api/admin/product-specifications/**"
+                        ).authenticated()
+
+                        // Product
+                        .requestMatchers(
+                                "/api/admin/products/**"
+                        ).authenticated()
+
+                        // Users
+                        .requestMatchers(
+                                "/api/admin/users/**"
+                        ).authenticated()
+
+                        // Roles
+                        .requestMatchers(
+                                "/api/admin/roles/**"
+                        ).authenticated()
+
+                        // Permissions
+                        .requestMatchers(
+                                "/api/admin/permissions/**"
+                        ).authenticated()
+
+                        // Menus
+                        .requestMatchers(
+                                "/api/admin/menus/**"
+                        ).authenticated()
+                        .requestMatchers(
+                                "/api/admin/companyinfo/**"
+                        ).authenticated()
+                        .requestMatchers(
+                                "/api/admin/bankdetails/**"
+                        ).authenticated()
+                        .requestMatchers(
+                                "/api/admin/taxinfoDetails/**"
+                        ).authenticated()
+                        .requestMatchers(
+                                "/api/admin/document-settings/**"
+                        ).authenticated()
+
+                        // Existing non-admin APIs
+                        .requestMatchers(
+                                "/api/categories/**",
+                                "/api/types/**",
+                                "/api/products/**"
+                        ).authenticated()
+
+                        // Other admin APIs
                         .requestMatchers(
                                 "/api/admin/**"
                         ).hasRole("ADMIN")
 
-                        // -------------------------------------------------
-                        // EVERYTHING ELSE
-                        // -------------------------------------------------
                         .anyRequest().authenticated()
                 )
 
-                // =========================================================
-                // JWT FILTER
-                // =========================================================
                 .addFilterBefore(
                         jwtAuthenticationFilter,
                         UsernamePasswordAuthenticationFilter.class
@@ -153,64 +162,51 @@ public class SecurityConfig {
         return http.build();
     }
 
-    // =========================================================
-    // CORS CONFIGURATION
-    // =========================================================
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
 
-        CorsConfiguration configuration = new CorsConfiguration();
+        CorsConfiguration configuration =
+                new CorsConfiguration();
 
         configuration.setAllowedOrigins(
                 Arrays.stream(allowedOrigins.split(","))
                         .map(String::trim)
+                        .filter(origin -> !origin.isEmpty())
                         .toList()
         );
 
-        configuration.setAllowedMethods(List.of(
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "PATCH",
-                "OPTIONS"
-        ));
+        configuration.setAllowedMethods(
+                Arrays.asList(
+                        "GET",
+                        "POST",
+                        "PUT",
+                        "DELETE",
+                        "PATCH",
+                        "OPTIONS"
+                )
+        );
 
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedHeaders(
+                List.of("*")
+        );
 
-        configuration.setExposedHeaders(List.of(
-                "Authorization"
-        ));
+        configuration.setExposedHeaders(
+                List.of("Authorization")
+        );
 
         configuration.setAllowCredentials(true);
+
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source =
                 new UrlBasedCorsConfigurationSource();
 
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration(
+                "/**",
+                configuration
+        );
 
         return source;
-    }
-
-    // =========================================================
-    // PASSWORD ENCODER
-    // =========================================================
-
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-    // =========================================================
-    // AUTHENTICATION MANAGER
-    // =========================================================
-
-    @Bean
-    public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration configuration
-    ) throws Exception {
-
-        return configuration.getAuthenticationManager();
     }
 }
